# BPI-Rockchip-Android11

./: .classpath  .gitignore  README.md  build.sh
device/generic/goldfish-opengl/: Android.bp  Android.mk  BUILD.gn  CMakeLists.txt  GNUmakefile  cmake_transform.py  common.mk  json-dump.mk
device/generic/goldfish-opengl/android-emu/: Android.bp  Android.mk  CMakeLists.txt
device/generic/goldfish-opengl/android-emu/android/base/: AndroidSubAllocator.cpp  AndroidSubAllocator.h  Compiler.h  EnumFlags.h  Optional.h  StringFormat.cpp  StringFormat.h  StringView.h  Tracing.cpp  Tracing.h  ring_buffer.c  ring_buffer.h
device/generic/goldfish-opengl/android-emu/android/utils/: compiler.h  debug.c  debug.h
device/generic/goldfish-opengl/fuchsia/: fuchsia_stdio.cc  port.cc  releasepackage.py  service_connector.cc
device/generic/goldfish-opengl/fuchsia/include/cutils/: log.h  native_handle.h  properties.h  threads.h
device/generic/goldfish-opengl/fuchsia/include/hardware/: gralloc.h  hardware.h  hwvulkan.h
device/generic/goldfish-opengl/fuchsia/include/log/: log.h
device/generic/goldfish-opengl/fuchsia/include/services/: service_connector.h
device/generic/goldfish-opengl/fuchsia/include/sync/: sync.h
device/generic/goldfish-opengl/fuchsia/include/vndk/: hardware_buffer.h
device/generic/goldfish-opengl/host/include/libOpenglRender/: IOStream.h
device/generic/goldfish-opengl/shared/GoldfishAddressSpace/: Android.bp  Android.mk  CMakeLists.txt  goldfish_address_space.cpp
device/generic/goldfish-opengl/shared/GoldfishAddressSpace/include/: goldfish_address_space.h  goldfish_address_space_android.impl  (+2 more)
device/generic/goldfish-opengl/shared/OpenglCodecCommon/: Android.mk  CMakeLists.txt  ChecksumCalculator.cpp  ErrorLog.h  GLClientState.cpp  GLClientState.h  GLESTextureUtils.cpp  GLESTextureUtils.h  GLSharedGroup.cpp  GLSharedGroup.h  IndexRangeCache.cpp  IndexRangeCache.h  KeyedVectorUtils.h  PortableMutex.h  SmartPtr.h  SocketStream.cpp  SocketStream.h  auto_goldfish_dma_context.cpp  auto_goldfish_dma_context.h  codec_defs.h  glUtils.cpp  glUtils.h  goldfish_dma.cpp  goldfish_dma.h  goldfish_dma_host.cpp
device/generic/goldfish-opengl/shared/gralloc_cb/: Android.bp  Android.mk  CMakeLists.txt
device/generic/goldfish-opengl/shared/qemupipe/: Android.bp  Android.mk  CMakeLists.txt  qemu_pipe_common.cpp  qemu_pipe_guest.cpp  qemu_pipe_host.cpp
device/generic/goldfish-opengl/system/GLESv1/: CMakeLists.txt  gl.cpp
device/generic/goldfish-opengl/system/GLESv1_enc/: Android.mk  CMakeLists.txt  GLEncoder.cpp  GLEncoder.h  gl_client_context.cpp  gl_client_context.h  gl_client_proc.h  gl_enc.cpp  gl_enc.h  gl_entry.cpp  gl_ftable.h  gl_opcodes.h
device/generic/goldfish-opengl/system/GLESv2/: CMakeLists.txt  gl2.cpp
device/generic/goldfish-opengl/system/GLESv2_enc/: Android.mk  CMakeLists.txt  GL2Encoder.cpp  GL2Encoder.h  GLESv2Validation.cpp  IOStream2.cpp  gl2_client_context.cpp  gl2_client_context.h  gl2_client_proc.h  gl2_enc.cpp  gl2_enc.h  gl2_entry.cpp  gl2_ftable.h  gl2_opcodes.h
device/generic/goldfish-opengl/system/OpenglSystemCommon/: AddressSpaceStream.cpp  AddressSpaceStream.h  Android.mk  CMakeLists.txt  EGLImage.h  EmulatorFeatureInfo.h  FormatConversions.cpp  FormatConversions.h  HostConnection.cpp  HostConnection.h  ProcessPipe.cpp  ProcessPipe.h  QemuPipeStream.cpp  QemuPipeStream.h  QemuPipeStreamFuchsia.cpp  ThreadInfo.cpp  ThreadInfo.h  ThreadInfo_host.cpp  VirtioGpuPipeStream.cpp  VirtioGpuPipeStream.h  VirtioGpuStream.cpp  VirtioGpuStream.h
device/generic/goldfish-opengl/system/egl/: Android.mk  CMakeLists.txt  ClientAPIExts.cpp  ClientAPIExts.in  egl.cpp  eglDisplay.cpp  eglDisplay.h  goldfish_sync.h
device/generic/goldfish-opengl/system/gralloc/: Android.mk  CMakeLists.txt  gralloc_30.cpp  gralloc_common.h  gralloc_old.cpp
device/generic/goldfish-opengl/system/hals/: Android.mk  allocator3.cpp  android.hardware.graphics.allocator@3.0-service.rc  cb_handle_30.h  debug.h  host_connection_session.h  mapper3.cpp  types.h
device/generic/goldfish-opengl/system/hwc2/: Android.mk  EmuHWC2.cpp  EmuHWC2.h
device/generic/goldfish-opengl/system/renderControl_enc/: Android.mk  CMakeLists.txt  renderControl_client_context.cpp  renderControl_client_context.h  renderControl_client_proc.h  renderControl_enc.cpp  renderControl_enc.h  renderControl_entry.cpp  renderControl_ftable.h  renderControl_opcodes.h
device/generic/goldfish-opengl/system/vulkan/: Android.mk  CMakeLists.txt  func_table.cpp  func_table.h  goldfish_vulkan.cpp
device/generic/goldfish-opengl/system/vulkan_enc/: Android.mk  AndroidHardwareBuffer.cpp  AndroidHardwareBuffer.h  CMakeLists.txt  HostVisibleMemoryVirtualization.cpp  HostVisibleMemoryVirtualization.h  ResourceTracker.cpp  ResourceTracker.h  Resources.cpp  Resources.h  Validation.cpp  Validation.h  VirtioGpuNext.h  VkEncoder.cpp  VkEncoder.h  VulkanHandleMapping.cpp  VulkanHandleMapping.h  VulkanHandles.h  VulkanStreamGuest.cpp  VulkanStreamGuest.h  goldfish_vk_deepcopy_guest.cpp  goldfish_vk_deepcopy_guest.h  goldfish_vk_extension_structs_guest.cpp  goldfish_vk_extension_structs_guest.h  goldfish_vk_handlemap_guest.cpp  goldfish_vk_handlemap_guest.h  goldfish_vk_marshaling_guest.cpp  goldfish_vk_marshaling_guest.h  goldfish_vk_private_defs.h  goldfish_vk_transform_guest.cpp  goldfish_vk_transform_guest.h  vk_format_info.h  vk_platform_compat.h  vk_struct_id.h  vk_util.h  vulkan_enc_unittests.cpp
device/generic/goldfish-opengl/tests/gles_android_wrapper/: Android.mk  ServerConnection.cpp  egl.cpp  gles.cpp
system/tools/release_tools/: Android.bp  CMakeLists.txt  ParserPoint.h  README.md  config.ini  config_parser.cpp  config_parser.h  create_gerrit_projects.sh  genernate_remove.sh  main.cpp  release_utils.cpp  release_utils.h  restore_patches.sh  restore_patches_body.sh
system/tools/release_tools/gitolite_tools/: CMakeLists.txt  README.md  main.cpp
system/tools/release_tools/manifest_tools/: CMakeLists.txt  README.md  main.cpp
system/tools/release_tools/read_manifest/: CMakeLists.txt  README.md  main.cpp
(+40438 files in other folders)
